--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tirumala TVS | Authorized TVS Dealer in Bengaluru</title>
+  <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
         content="Tirumala TVS is an authorized TVS Motor Company dealer in Bengaluru offering bikes, scooters, EVs, service, finance and test rides.">
@@ -12,10 +12,10 @@
 <body>
 
 <!-- HEADER -->
-<header>
-  <div class="header-main">
-    <h2>Tirumala TVS</h2>
-    <nav>
+<header class="site-header">
+  <div class="container header-flex">
+    <h1 class="logo">Tirumala TVS</h1>
+    <nav class="nav">
       <a href="index.html">Home</a>
       <a href="models.html">Models</a>
       <a href="contacts.html">Contact</a>
@@ -25,113 +25,119 @@
 
 <!-- HERO -->
 <section class="hero">
-  <h1>Driven by Trust. Powered by TVS.</h1>
-  <p>
-    Authorized TVS Motor Company dealer serving Bengaluru with
-    motorcycles, scooters, electric vehicles, service and finance.
-  </p>
+  <div class="container hero-content">
+    <h2>Driven by Trust.<br><span>Powered by TVS.</span></h2>
+    <p>
+      Authorized TVS Motor Company dealer in Bengaluru offering
+      motorcycles, scooters, electric vehicles, service and finance.
+    </p>
 
-  <div class="hero-buttons">
-    <a href="models.html" class="btn-primary">Explore Models</a>
-    <a href="contacts.html" class="btn-secondary">Book Test Ride</a>
+    <div class="cta-row">
+      <a href="models.html" class="btn primary">Explore Models</a>
+      <a href="contacts.html" class="btn outline">Book Test Ride</a>
+    </div>
   </div>
 </section>
 
-<!-- APACHE BANNER -->
-<section class="apache-banner">
-  <div class="apache-content">
-    <h2>TVS Apache Series</h2>
-    <p>
-      Born from the racetrack. Crafted by champions.
-      The TVS Apache series represents over four decades of racing excellence
-      and cutting-edge engineering.
-    </p>
+<!-- APACHE SECTION -->
+<section class="apache">
+  <div class="container apache-grid">
+    <div>
+      <h3>TVS Apache Series</h3>
+      <p>
+        Born from the racetrack and crafted by champions, the TVS Apache
+        series represents decades of racing excellence and advanced
+        engineering.
+      </p>
 
-    <ul>
-      <li>🏆 Indian Motorcycle of the Year – TVS Raider</li>
-      <li>🏁 Racing DNA from TVS Racing</li>
-      <li>⚙ Advanced performance & safety technology</li>
-    </ul>
+      <ul class="apache-points">
+        <li>🏆 Indian Motorcycle of the Year – TVS Raider</li>
+        <li>🏁 Racing DNA from TVS Racing</li>
+        <li>⚙ Performance-focused safety & technology</li>
+      </ul>
 
-    <a href="models/apache160.html" class="btn-apache">
-      Explore Apache Range →
-    </a>
+      <a href="models/apache160.html" class="btn apache-btn">
+        Explore Apache Range →
+      </a>
+    </div>
   </div>
 </section>
 
 <!-- ABOUT TVS -->
-<section class="section">
-  <h2>About TVS Motor Company</h2>
-  <p>
-    TVS Motor Company is one of India’s most trusted two-wheeler manufacturers
-    with a legacy of innovation, racing excellence and global presence in
-    over 80 countries. Known for quality, performance and reliability,
-    TVS continues to lead the industry across motorcycles, scooters and EVs.
-  </p>
+<section class="section light">
+  <div class="container">
+    <h3>About TVS Motor Company</h3>
+    <p>
+      TVS Motor Company is one of India’s most trusted two-wheeler manufacturers
+      with a global presence in over 80 countries. Known for innovation,
+      reliability and racing excellence, TVS leads across motorcycles,
+      scooters and electric mobility.
+    </p>
+  </div>
 </section>
 
-<!-- ABOUT DEALER -->
-<section class="section highlight">
-  <h2>Why Tirumala TVS?</h2>
+<!-- WHY TIRUMALA -->
+<section class="section">
+  <div class="container">
+    <h3>Why Tirumala TVS?</h3>
 
-  <div class="info-grid">
-    <div>
-      <h3>Authorized TVS Dealer</h3>
-      <p>Sales, service, genuine spare parts & warranty support.</p>
-    </div>
+    <div class="cards">
+      <div class="card">
+        <h4>Authorized Dealer</h4>
+        <p>Sales, service, genuine spares & warranty support.</p>
+      </div>
 
-    <div>
-      <h3>Complete Product Range</h3>
-      <p>Apache, Raider, Ronin, Jupiter, Ntorq, iQube & XL 100.</p>
-    </div>
+      <div class="card">
+        <h4>Complete TVS Range</h4>
+        <p>Apache, Raider, Ronin, Jupiter, Ntorq, iQube & XL 100.</p>
+      </div>
 
-    <div>
-      <h3>Sales & After-Sales</h3>
-      <p>Test rides, finance, insurance & authorized service.</p>
-    </div>
+      <div class="card">
+        <h4>Sales & After-Sales</h4>
+        <p>Test rides, finance, insurance & service booking.</p>
+      </div>
 
-    <div>
-      <h3>Trusted by Bengaluru Riders</h3>
-      <p>Focused on transparency, long-term support & customer satisfaction.</p>
+      <div class="card">
+        <h4>Customer-First Approach</h4>
+        <p>Transparent pricing and long-term ownership support.</p>
+      </div>
     </div>
   </div>
 </section>
 
 <!-- QUICK ACTIONS -->
-<section class="section quick-actions">
-  <h2>Quick Actions</h2>
+<section class="section light">
+  <div class="container">
+    <h3>Quick Actions</h3>
 
-  <div class="models-grid">
-    <div class="model-card">
-      <h3>Compare Models</h3>
-      <p>View specifications & features of all TVS vehicles.</p>
-      <a href="models.html">Compare →</a>
-    </div>
+    <div class="cards">
+      <div class="card action">
+        <h4>Compare Models</h4>
+        <a href="models.html">View Models →</a>
+      </div>
 
-    <div class="model-card">
-      <h3>Book Test Ride</h3>
-      <p>Schedule a test ride at Tirumala TVS.</p>
-      <a href="contacts.html">Book Now →</a>
-    </div>
+      <div class="card action">
+        <h4>Book Test Ride</h4>
+        <a href="contacts.html">Schedule →</a>
+      </div>
 
-    <div class="model-card">
-      <h3>Book Service</h3>
-      <p>Authorized TVS service appointment.</p>
-      <a href="contacts.html">Schedule →</a>
-    </div>
+      <div class="card action">
+        <h4>Book Service</h4>
+        <a href="contacts.html">Book Now →</a>
+      </div>
 
-    <div class="model-card">
-      <h3>Explore EV</h3>
-      <p>Discover TVS iQube electric scooters.</p>
-      <a href="models/iqube.html">Explore →</a>
+      <div class="card action">
+        <h4>Explore Electric</h4>
+        <a href="models/iqube.html">TVS iQube →</a>
+      </div>
     </div>
   </div>
 </section>
 
 <!-- FOOTER -->
-<footer>
-  <div>
-    © 2026 Tirumala TVS, Bengaluru · Authorized TVS Dealer
+<footer class="footer">
+  <div class="container">
+    © 2026 Tirumala TVS, Bengaluru · Authorized TVS Motor Company Dealer
   </div>
 </footer>
 
