--- a/models.html
+++ b/models.html
@@ -1,144 +1,159 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>TVS Models | Tirumala TVS Bengaluru</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-</head>
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-<body>
+body {
+  color: #111827;
+  background: #ffffff;
+  line-height: 1.6;
+}
 
-<!-- HEADER -->
-<header>
-  <div class="header-main">
-    <h2>Tirumala TVS</h2>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="models.html">Models</a>
-      <a href="contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+a {
+  text-decoration: none;
+  color: #0b4fd8;
+}
 
-<!-- PAGE TITLE -->
-<section class="section">
-  <h1 style="color:#0b4fd8;">TVS Models</h1>
-  <p>
-    Explore the complete range of TVS Motorcycles, Scooters, Mopeds and
-    Electric Vehicles available at Tirumala TVS, Bengaluru.
-  </p>
-</section>
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 16px;
+}
 
-<!-- MOTORCYCLES -->
-<section class="section">
-  <h2>TVS Motorcycles</h2>
+/* HEADER */
+.site-header {
+  border-bottom: 2px solid #0b4fd8;
+  background: #fff;
+}
 
-  <div class="models-grid">
-    <div class="model-card">
-      <h3>Apache RTR 160 / 200</h3>
-      <p>Race-inspired street motorcycles with powerful performance.</p>
-      <a href="models/apache160.html">View Details</a>
-    </div>
+.header-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px 0;
+}
 
-    <div class="model-card">
-      <h3>Apache RR 310</h3>
-      <p>Premium supersport motorcycle with track-focused engineering.</p>
-      <a href="models/apache160.html">View Details</a>
-    </div>
+.logo {
+  font-size: 24px;
+  color: #0a1f44;
+}
 
-    <div class="model-card">
-      <h3>TVS Raider 125</h3>
-      <p>Sporty commuter with advanced technology and comfort.</p>
-      <a href="models/raider.html">View Details</a>
-    </div>
+.nav a {
+  margin-left: 20px;
+  font-weight: bold;
+}
 
-    <div class="model-card">
-      <h3>TVS Ronin</h3>
-      <p>Modern-retro motorcycle built for relaxed cruising.</p>
-      <a href="models/ronin.html">View Details</a>
-    </div>
-  </div>
-</section>
+/* HERO */
+.hero {
+  background: linear-gradient(135deg, #0a1f44, #0b4fd8);
+  color: #fff;
+  padding: 80px 0;
+}
 
-<!-- SCOOTERS -->
-<section class="section">
-  <h2>TVS Scooters</h2>
+.hero-content h2 {
+  font-size: 42px;
+  margin-bottom: 16px;
+}
 
-  <div class="models-grid">
-    <div class="model-card">
-      <h3>TVS Jupiter 113</h3>
-      <p>Comfortable and reliable family scooter.</p>
-      <a href="models/jupiter113.html">View Details</a>
-    </div>
+.hero-content span {
+  color: #ffcc00;
+}
 
-    <div class="model-card">
-      <h3>TVS Jupiter 125</h3>
-      <p>Premium scooter with power and large storage.</p>
-      <a href="models/jupiter125.html">View Details</a>
-    </div>
+.hero-content p {
+  max-width: 600px;
+  margin-bottom: 24px;
+}
 
-    <div class="model-card">
-      <h3>TVS Ntorq 125</h3>
-      <p>Sporty scooter with SmartXonnect technology.</p>
-      <a href="models/ntorq125.html">View Details</a>
-    </div>
+.cta-row {
+  display: flex;
+  gap: 16px;
+}
 
-    <div class="model-card">
-      <h3>TVS Zest 110</h3>
-      <p>Lightweight, stylish scooter for city riding.</p>
-      <a href="models/zest110.html">View Details</a>
-    </div>
-  </div>
-</section>
+.btn {
+  padding: 12px 24px;
+  border-radius: 6px;
+  font-weight: bold;
+}
 
-<!-- MOPEDS -->
-<section class="section">
-  <h2>TVS Mopeds</h2>
+.primary {
+  background: #ffcc00;
+  color: #111;
+}
 
-  <div class="models-grid">
-    <div class="model-card">
-      <h3>TVS XL 100</h3>
-      <p>India’s trusted moped for work and utility.</p>
-      <a href="models/xl100.html">View Details</a>
-    </div>
-  </div>
-</section>
+.outline {
+  border: 2px solid #fff;
+  color: #fff;
+}
 
-<!-- ELECTRIC -->
-<section class="section">
-  <h2>Electric Vehicles</h2>
+/* APACHE */
+.apache {
+  background: #111827;
+  color: #fff;
+  padding: 60px 0;
+}
 
-  <div class="models-grid">
-    <div class="model-card">
-      <h3>TVS iQube</h3>
-      <p>Smart electric scooter with connected features.</p>
-      <a href="models/iqube.html">View Details</a>
-    </div>
-  </div>
-</section>
+.apache h3 {
+  font-size: 32px;
+  margin-bottom: 16px;
+  color: #ff3b3b;
+}
 
-<!-- CTA -->
-<section class="section" style="background:#f5f7fb;border-radius:12px;">
-  <h2>Need Help Choosing a Model?</h2>
-  <p>
-    Visit Tirumala TVS showroom or contact us for expert guidance,
-    test rides and best offers.
-  </p>
-  <a href="contacts.html"
-     style="display:inline-block;margin-top:10px;padding:12px 24px;
-            background:#e11d48;color:#fff;border-radius:6px;
-            text-decoration:none;font-weight:bold;">
-    Contact Us
-  </a>
-</section>
+.apache-points li {
+  margin: 10px 0;
+}
 
-<!-- FOOTER -->
-<footer>
-  <div>
-    © 2026 Tirumala TVS, Bengaluru. Authorized TVS Dealer.
-  </div>
-</footer>
+.apache-btn {
+  display: inline-block;
+  margin-top: 20px;
+  background: #e10600;
+  color: #fff;
+}
 
-</body>
-</html>
+/* SECTIONS */
+.section {
+  padding: 60px 0;
+}
+
+.section.light {
+  background: #f5f7fb;
+}
+
+.section h3 {
+  font-size: 28px;
+  margin-bottom: 16px;
+}
+
+/* CARDS */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.card {
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+}
+
+.card.action {
+  text-align: center;
+}
+
+.card.action a {
+  display: inline-block;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+/* FOOTER */
+.footer {
+  background: #0a1f44;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+}
