--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-        content="Tirumala TVS is an authorized TVS Motor Company dealer in Bengaluru offering bikes, scooters, EVs, service, finance and test rides.">
+        content="Tirumala TVS is an authorized TVS Motor Company dealer in Bengaluru offering motorcycles, scooters, EVs, service and finance.">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
 <!-- HEADER -->
-<header class="site-header">
+<header class="header">
   <div class="container header-flex">
     <h1 class="logo">Tirumala TVS</h1>
-    <nav class="nav">
+    <nav>
       <a href="index.html">Home</a>
       <a href="models.html">Models</a>
       <a href="contacts.html">Contact</a>
@@ -25,41 +25,64 @@
 
 <!-- HERO -->
 <section class="hero">
-  <div class="container hero-content">
-    <h2>Driven by Trust.<br><span>Powered by TVS.</span></h2>
+  <div class="container">
+    <h2>Driven by Trust. Powered by TVS.</h2>
     <p>
-      Authorized TVS Motor Company dealer in Bengaluru offering
-      motorcycles, scooters, electric vehicles, service and finance.
+      Authorized TVS Motor Company dealer in Bengaluru for motorcycles, scooters,
+      electric vehicles, service and finance.
     </p>
-
-    <div class="cta-row">
+    <div class="hero-buttons">
       <a href="models.html" class="btn primary">Explore Models</a>
-      <a href="contacts.html" class="btn outline">Book Test Ride</a>
+      <a href="contacts.html" class="btn secondary">Book Test Ride</a>
     </div>
   </div>
 </section>
 
-<!-- APACHE SECTION -->
-<section class="apache">
-  <div class="container apache-grid">
-    <div>
-      <h3>TVS Apache Series</h3>
-      <p>
-        Born from the racetrack and crafted by champions, the TVS Apache
-        series represents decades of racing excellence and advanced
-        engineering.
-      </p>
+<!-- QUICK ACTIONS -->
+<section class="section light">
+  <div class="container">
+    <h3>Quick Actions</h3>
+    <div class="cards">
+      <div class="card">
+        <h4>Compare Models</h4>
+        <p>View all TVS bikes & scooters.</p>
+        <a href="models.html">View Models →</a>
+      </div>
 
-      <ul class="apache-points">
-        <li>🏆 Indian Motorcycle of the Year – TVS Raider</li>
-        <li>🏁 Racing DNA from TVS Racing</li>
-        <li>⚙ Performance-focused safety & technology</li>
-      </ul>
+      <div class="card">
+        <h4>Book Test Ride</h4>
+        <p>Schedule a test ride instantly.</p>
+        <a href="contacts.html">Book Now →</a>
+      </div>
 
-      <a href="models/apache160.html" class="btn apache-btn">
-        Explore Apache Range →
-      </a>
+      <div class="card">
+        <h4>Book Service</h4>
+        <p>Authorized TVS service booking.</p>
+        <a href="contacts.html">Schedule →</a>
+      </div>
+
+      <div class="card">
+        <h4>Explore Electric</h4>
+        <p>Discover TVS iQube EV.</p>
+        <a href="models.html#ev">Explore →</a>
+      </div>
     </div>
+  </div>
+</section>
+
+<!-- APACHE -->
+<section class="section">
+  <div class="container">
+    <h3>TVS Apache Series</h3>
+    <p class="muted">
+      Born from the racetrack. Crafted by champions. Racing DNA from TVS Racing.
+    </p>
+    <ul class="bullets">
+      <li>🏆 Indian Motorcycle of the Year – TVS Raider</li>
+      <li>🏁 Proven racing heritage</li>
+      <li>⚙️ Advanced performance & safety technology</li>
+    </ul>
+    <a href="models.html" class="link">Explore Apache Range →</a>
   </div>
 </section>
 
@@ -69,18 +92,16 @@
     <h3>About TVS Motor Company</h3>
     <p>
       TVS Motor Company is one of India’s most trusted two-wheeler manufacturers
-      with a global presence in over 80 countries. Known for innovation,
-      reliability and racing excellence, TVS leads across motorcycles,
-      scooters and electric mobility.
+      with a legacy of innovation, racing excellence and global presence in over
+      80 countries. Known for quality, performance and reliability.
     </p>
   </div>
 </section>
 
-<!-- WHY TIRUMALA -->
+<!-- WHY US -->
 <section class="section">
   <div class="container">
     <h3>Why Tirumala TVS?</h3>
-
     <div class="cards">
       <div class="card">
         <h4>Authorized Dealer</h4>
@@ -98,37 +119,8 @@
       </div>
 
       <div class="card">
-        <h4>Customer-First Approach</h4>
-        <p>Transparent pricing and long-term ownership support.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- QUICK ACTIONS -->
-<section class="section light">
-  <div class="container">
-    <h3>Quick Actions</h3>
-
-    <div class="cards">
-      <div class="card action">
-        <h4>Compare Models</h4>
-        <a href="models.html">View Models →</a>
-      </div>
-
-      <div class="card action">
-        <h4>Book Test Ride</h4>
-        <a href="contacts.html">Schedule →</a>
-      </div>
-
-      <div class="card action">
-        <h4>Book Service</h4>
-        <a href="contacts.html">Book Now →</a>
-      </div>
-
-      <div class="card action">
-        <h4>Explore Electric</h4>
-        <a href="models/iqube.html">TVS iQube →</a>
+        <h4>Customer-First</h4>
+        <p>Transparent pricing & long-term ownership support.</p>
       </div>
     </div>
   </div>
@@ -137,7 +129,7 @@
 <!-- FOOTER -->
 <footer class="footer">
   <div class="container">
-    © 2026 Tirumala TVS, Bengaluru · Authorized TVS Motor Company Dealer
+    © 2026 Tirumala TVS · Authorized TVS Dealer · Bengaluru
   </div>
 </footer>
 
