--- a/models.html
+++ b/models.html
@@ -1,159 +1,79 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>TVS Models | Tirumala TVS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-body {
-  color: #111827;
-  background: #ffffff;
-  line-height: 1.6;
-}
+<body>
 
-a {
-  text-decoration: none;
-  color: #0b4fd8;
-}
+<header class="header">
+  <div class="container header-flex">
+    <h1 class="logo">Tirumala TVS</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="models.html">Models</a>
+      <a href="contacts.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
-.container {
-  max-width: 1200px;
-  margin: auto;
-  padding: 0 16px;
-}
+<section class="section light">
+  <div class="container">
+    <h2>TVS Models</h2>
+    <p>Motorcycles, scooters, electric vehicles and mopeds.</p>
+  </div>
+</section>
 
-/* HEADER */
-.site-header {
-  border-bottom: 2px solid #0b4fd8;
-  background: #fff;
-}
+<section class="section">
+  <div class="container">
+    <h3>Motorcycles</h3>
+    <div class="cards">
+      <div class="card"><h4>Apache RTR 160 / 200</h4></div>
+      <div class="card"><h4>Apache RR 310</h4></div>
+      <div class="card"><h4>Raider 125</h4></div>
+      <div class="card"><h4>Ronin</h4></div>
+    </div>
+  </div>
+</section>
 
-.header-flex {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 0;
-}
+<section class="section light">
+  <div class="container">
+    <h3>Scooters</h3>
+    <div class="cards">
+      <div class="card"><h4>Jupiter 110</h4></div>
+      <div class="card"><h4>Jupiter 125</h4></div>
+      <div class="card"><h4>Ntorq 125</h4></div>
+      <div class="card"><h4>Zest 110</h4></div>
+    </div>
+  </div>
+</section>
 
-.logo {
-  font-size: 24px;
-  color: #0a1f44;
-}
+<section class="section">
+  <div class="container" id="ev">
+    <h3>Electric</h3>
+    <div class="cards">
+      <div class="card"><h4>TVS iQube</h4></div>
+    </div>
+  </div>
+</section>
 
-.nav a {
-  margin-left: 20px;
-  font-weight: bold;
-}
+<section class="section light">
+  <div class="container">
+    <h3>Mopeds</h3>
+    <div class="cards">
+      <div class="card"><h4>TVS XL 100</h4></div>
+    </div>
+  </div>
+</section>
 
-/* HERO */
-.hero {
-  background: linear-gradient(135deg, #0a1f44, #0b4fd8);
-  color: #fff;
-  padding: 80px 0;
-}
+<footer class="footer">
+  <div class="container">
+    © 2026 Tirumala TVS
+  </div>
+</footer>
 
-.hero-content h2 {
-  font-size: 42px;
-  margin-bottom: 16px;
-}
-
-.hero-content span {
-  color: #ffcc00;
-}
-
-.hero-content p {
-  max-width: 600px;
-  margin-bottom: 24px;
-}
-
-.cta-row {
-  display: flex;
-  gap: 16px;
-}
-
-.btn {
-  padding: 12px 24px;
-  border-radius: 6px;
-  font-weight: bold;
-}
-
-.primary {
-  background: #ffcc00;
-  color: #111;
-}
-
-.outline {
-  border: 2px solid #fff;
-  color: #fff;
-}
-
-/* APACHE */
-.apache {
-  background: #111827;
-  color: #fff;
-  padding: 60px 0;
-}
-
-.apache h3 {
-  font-size: 32px;
-  margin-bottom: 16px;
-  color: #ff3b3b;
-}
-
-.apache-points li {
-  margin: 10px 0;
-}
-
-.apache-btn {
-  display: inline-block;
-  margin-top: 20px;
-  background: #e10600;
-  color: #fff;
-}
-
-/* SECTIONS */
-.section {
-  padding: 60px 0;
-}
-
-.section.light {
-  background: #f5f7fb;
-}
-
-.section h3 {
-  font-size: 28px;
-  margin-bottom: 16px;
-}
-
-/* CARDS */
-.cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 20px;
-  margin-top: 30px;
-}
-
-.card {
-  background: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 6px 18px rgba(0,0,0,0.08);
-}
-
-.card.action {
-  text-align: center;
-}
-
-.card.action a {
-  display: inline-block;
-  margin-top: 10px;
-  font-weight: bold;
-}
-
-/* FOOTER */
-.footer {
-  background: #0a1f44;
-  color: #fff;
-  text-align: center;
-  padding: 20px 0;
-}
+</body>
+</html>
