--- a/index.html
+++ b/index.html
@@ -3,134 +3,101 @@
 <head>
   <meta charset="UTF-8">
   <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-        content="Tirumala TVS is an authorized TVS Motor Company dealer in Bengaluru offering motorcycles, scooters, EVs, service and finance.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
-<!-- HEADER -->
-<header class="header">
-  <div class="container header-flex">
-    <h1 class="logo">Tirumala TVS</h1>
+<header>
+  <div class="topbar">
+    <h1>Tirumala TVS</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="models.html">Models</a>
-      <a href="contacts.html">Contact</a>
+      <a href="models.html">Motorcycles</a>
+      <a href="models.html#scooters">Scooters</a>
+      <a href="models.html#mopeds">Mopeds</a>
+      <a href="models.html#electric">Electric</a>
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
     </nav>
   </div>
 </header>
 
-<!-- HERO -->
 <section class="hero">
-  <div class="container">
+  <div class="hero-inner">
     <h2>Driven by Trust. Powered by TVS.</h2>
     <p>
-      Authorized TVS Motor Company dealer in Bengaluru for motorcycles, scooters,
-      electric vehicles, service and finance.
+      Authorized TVS Motor Company dealer in Bengaluru offering motorcycles,
+      scooters, electric vehicles, genuine service and finance support.
     </p>
     <div class="hero-buttons">
-      <a href="models.html" class="btn primary">Explore Models</a>
-      <a href="contacts.html" class="btn secondary">Book Test Ride</a>
+      <a href="models.html" class="btn-primary">Explore Models</a>
+      <a href="#services" class="btn-secondary">Book Test Ride</a>
     </div>
   </div>
 </section>
 
-<!-- QUICK ACTIONS -->
-<section class="section light">
-  <div class="container">
-    <h3>Quick Actions</h3>
-    <div class="cards">
-      <div class="card">
-        <h4>Compare Models</h4>
-        <p>View all TVS bikes & scooters.</p>
-        <a href="models.html">View Models →</a>
-      </div>
+<section id="about">
+  <h3>About TVS Motor Company</h3>
+  <p>
+    TVS Motor Company is one of India’s most trusted two-wheeler manufacturers,
+    with a legacy of innovation, racing excellence and global presence in over
+    80 countries.
+  </p>
+</section>
 
-      <div class="card">
-        <h4>Book Test Ride</h4>
-        <p>Schedule a test ride instantly.</p>
-        <a href="contacts.html">Book Now →</a>
-      </div>
-
-      <div class="card">
-        <h4>Book Service</h4>
-        <p>Authorized TVS service booking.</p>
-        <a href="contacts.html">Schedule →</a>
-      </div>
-
-      <div class="card">
-        <h4>Explore Electric</h4>
-        <p>Discover TVS iQube EV.</p>
-        <a href="models.html#ev">Explore →</a>
-      </div>
+<section>
+  <h3>Why Tirumala TVS?</h3>
+  <div class="grid">
+    <div class="card">
+      <h4>Authorized Dealer</h4>
+      <p>Genuine vehicles, spares & manufacturer warranty.</p>
+    </div>
+    <div class="card">
+      <h4>Complete TVS Range</h4>
+      <p>Apache, Raider, Ronin, Jupiter, Ntorq, iQube & XL 100.</p>
+    </div>
+    <div class="card">
+      <h4>Sales & Service</h4>
+      <p>Test rides, finance, insurance & service booking.</p>
     </div>
   </div>
 </section>
 
-<!-- APACHE -->
-<section class="section">
-  <div class="container">
-    <h3>TVS Apache Series</h3>
-    <p class="muted">
-      Born from the racetrack. Crafted by champions. Racing DNA from TVS Racing.
-    </p>
-    <ul class="bullets">
-      <li>🏆 Indian Motorcycle of the Year – TVS Raider</li>
-      <li>🏁 Proven racing heritage</li>
-      <li>⚙️ Advanced performance & safety technology</li>
-    </ul>
-    <a href="models.html" class="link">Explore Apache Range →</a>
-  </div>
-</section>
-
-<!-- ABOUT TVS -->
-<section class="section light">
-  <div class="container">
-    <h3>About TVS Motor Company</h3>
-    <p>
-      TVS Motor Company is one of India’s most trusted two-wheeler manufacturers
-      with a legacy of innovation, racing excellence and global presence in over
-      80 countries. Known for quality, performance and reliability.
-    </p>
-  </div>
-</section>
-
-<!-- WHY US -->
-<section class="section">
-  <div class="container">
-    <h3>Why Tirumala TVS?</h3>
-    <div class="cards">
-      <div class="card">
-        <h4>Authorized Dealer</h4>
-        <p>Sales, service, genuine spares & warranty support.</p>
-      </div>
-
-      <div class="card">
-        <h4>Complete TVS Range</h4>
-        <p>Apache, Raider, Ronin, Jupiter, Ntorq, iQube & XL 100.</p>
-      </div>
-
-      <div class="card">
-        <h4>Sales & After-Sales</h4>
-        <p>Test rides, finance, insurance & service booking.</p>
-      </div>
-
-      <div class="card">
-        <h4>Customer-First</h4>
-        <p>Transparent pricing & long-term ownership support.</p>
-      </div>
+<section id="services">
+  <h3>Quick Actions</h3>
+  <div class="grid">
+    <div class="card">
+      <h4>Compare Models</h4>
+      <a href="models.html">View Models →</a>
+    </div>
+    <div class="card">
+      <h4>Book Test Ride</h4>
+      <a href="#services">Schedule →</a>
+    </div>
+    <div class="card">
+      <h4>Book Service</h4>
+      <a href="#services">Book Now →</a>
+    </div>
+    <div class="card">
+      <h4>Explore Electric</h4>
+      <a href="models.html#electric">TVS iQube →</a>
     </div>
   </div>
 </section>
 
-<!-- FOOTER -->
-<footer class="footer">
-  <div class="container">
-    © 2026 Tirumala TVS · Authorized TVS Dealer · Bengaluru
+<section class="quick-links">
+  <h3>Quick Links</h3>
+  <div class="grid">
+    <a href="#about">About Us</a>
+    <a href="#services">Book Service Appointment</a>
+    <a href="#services">Book Test Drive</a>
+    <a href="models.html">All Models</a>
   </div>
+</section>
+
+<footer>
+  © 2026 Tirumala TVS, Bengaluru. Authorized TVS Dealer.
 </footer>
 
 </body>
