--- a/models.html
+++ b/models.html
@@ -3,76 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <title>TVS Models | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
-<header class="header">
-  <div class="container header-flex">
-    <h1 class="logo">Tirumala TVS</h1>
+<header>
+  <div class="topbar">
+    <h1>Tirumala TVS</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="models.html">Models</a>
-      <a href="contacts.html">Contact</a>
+      <a href="index.html#services">Services</a>
+      <a href="index.html#about">About</a>
     </nav>
   </div>
 </header>
 
-<section class="section light">
-  <div class="container">
-    <h2>TVS Models</h2>
-    <p>Motorcycles, scooters, electric vehicles and mopeds.</p>
+<section>
+  <h3>Motorcycles</h3>
+  <div class="grid">
+    <div class="card"><h4>Apache RTR 160 / 200</h4></div>
+    <div class="card"><h4>Apache RR 310</h4></div>
+    <div class="card"><h4>Raider 125</h4></div>
+    <div class="card"><h4>Ronin</h4></div>
   </div>
 </section>
 
-<section class="section">
-  <div class="container">
-    <h3>Motorcycles</h3>
-    <div class="cards">
-      <div class="card"><h4>Apache RTR 160 / 200</h4></div>
-      <div class="card"><h4>Apache RR 310</h4></div>
-      <div class="card"><h4>Raider 125</h4></div>
-      <div class="card"><h4>Ronin</h4></div>
-    </div>
+<section id="scooters">
+  <h3>Scooters</h3>
+  <div class="grid">
+    <div class="card"><h4>Jupiter 113</h4></div>
+    <div class="card"><h4>Jupiter 125</h4></div>
+    <div class="card"><h4>Ntorq 125</h4></div>
+    <div class="card"><h4>Zest 110</h4></div>
   </div>
 </section>
 
-<section class="section light">
-  <div class="container">
-    <h3>Scooters</h3>
-    <div class="cards">
-      <div class="card"><h4>Jupiter 110</h4></div>
-      <div class="card"><h4>Jupiter 125</h4></div>
-      <div class="card"><h4>Ntorq 125</h4></div>
-      <div class="card"><h4>Zest 110</h4></div>
-    </div>
+<section id="mopeds">
+  <h3>Mopeds</h3>
+  <div class="grid">
+    <div class="card"><h4>XL 100</h4></div>
   </div>
 </section>
 
-<section class="section">
-  <div class="container" id="ev">
-    <h3>Electric</h3>
-    <div class="cards">
-      <div class="card"><h4>TVS iQube</h4></div>
-    </div>
+<section id="electric">
+  <h3>Electric</h3>
+  <div class="grid">
+    <div class="card"><h4>TVS iQube</h4></div>
   </div>
 </section>
 
-<section class="section light">
-  <div class="container">
-    <h3>Mopeds</h3>
-    <div class="cards">
-      <div class="card"><h4>TVS XL 100</h4></div>
-    </div>
-  </div>
-</section>
-
-<footer class="footer">
-  <div class="container">
-    © 2026 Tirumala TVS
-  </div>
+<footer>
+  © 2026 Tirumala TVS. All rights reserved.
 </footer>
 
 </body>
