--- a/models.html
+++ b/models.html
@@ -9,8 +9,8 @@
 <body>
 
 <header>
-  <div class="topbar">
-    <h1>Tirumala TVS</h1>
+  <div class="header-inner">
+    <div class="logo">Tirumala TVS</div>
     <nav>
       <a href="index.html">Home</a>
       <a href="models.html">Models</a>
@@ -21,41 +21,63 @@
 </header>
 
 <section>
-  <h3>Motorcycles</h3>
+  <h2 class="section-title">Motorcycles</h2>
   <div class="grid">
-    <div class="card"><h4>Apache RTR 160 / 200</h4></div>
-    <div class="card"><h4>Apache RR 310</h4></div>
-    <div class="card"><h4>Raider 125</h4></div>
-    <div class="card"><h4>Ronin</h4></div>
+    <div class="card">
+      <h3>Apache RTR 160 / 200</h3>
+      <p>Performance street motorcycles inspired by TVS Racing.</p>
+      <a href="#">View Details →</a>
+    </div>
+    <div class="card">
+      <h3>Apache RR 310</h3>
+      <p>Fully-faired performance motorcycle with track DNA.</p>
+      <a href="#">View Details →</a>
+    </div>
+    <div class="card">
+      <h3>Raider 125</h3>
+      <p>Indian Motorcycle of the Year winner.</p>
+      <a href="#">View Details →</a>
+    </div>
+    <div class="card">
+      <h3>Ronin</h3>
+      <p>Modern-retro cruiser with unique character.</p>
+      <a href="#">View Details →</a>
+    </div>
   </div>
 </section>
 
 <section id="scooters">
-  <h3>Scooters</h3>
+  <h2 class="section-title">Scooters</h2>
   <div class="grid">
-    <div class="card"><h4>Jupiter 113</h4></div>
-    <div class="card"><h4>Jupiter 125</h4></div>
-    <div class="card"><h4>Ntorq 125</h4></div>
-    <div class="card"><h4>Zest 110</h4></div>
+    <div class="card"><h3>Jupiter 113</h3><p>Family comfort scooter.</p></div>
+    <div class="card"><h3>Jupiter 125</h3><p>Premium power & mileage.</p></div>
+    <div class="card"><h3>Ntorq 125</h3><p>Sporty performance scooter.</p></div>
+    <div class="card"><h3>Zest 110</h3><p>Lightweight city scooter.</p></div>
   </div>
 </section>
 
 <section id="mopeds">
-  <h3>Mopeds</h3>
+  <h2 class="section-title">Mopeds</h2>
   <div class="grid">
-    <div class="card"><h4>XL 100</h4></div>
+    <div class="card">
+      <h3>XL 100</h3>
+      <p>India’s most trusted moped.</p>
+    </div>
   </div>
 </section>
 
 <section id="electric">
-  <h3>Electric</h3>
+  <h2 class="section-title">Electric</h2>
   <div class="grid">
-    <div class="card"><h4>TVS iQube</h4></div>
+    <div class="card">
+      <h3>TVS iQube</h3>
+      <p>Smart, connected electric scooter.</p>
+    </div>
   </div>
 </section>
 
 <footer>
-  © 2026 Tirumala TVS. All rights reserved.
+  © 2026 Tirumala TVS
 </footer>
 
 </body>
