--- a/index.html
+++ b/index.html
@@ -1,170 +1,77 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
-body {
-  background: #f4f6f9;
-  color: #1f2933;
-  line-height: 1.6;
-}
+<header>
+  <div class="header-wrap">
+    <h1>Tirumala TVS</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="models.html">Models</a>
+      <a href="contacts.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
-/* HEADER */
-header {
-  background: #ffffff;
-  border-bottom: 3px solid #0b4fd8;
-}
+<section class="hero">
+  <div class="hero-content">
+    <h2>Driven by Trust. Powered by TVS.</h2>
+    <p>
+      Authorized TVS Motor Company dealer in Bengaluru offering motorcycles,
+      scooters, electric vehicles, genuine service and finance support.
+    </p>
+    <div class="hero-buttons">
+      <a href="models.html" class="btn btn-primary">Explore Models</a>
+      <a href="contacts.html" class="btn btn-secondary">Book Test Ride</a>
+    </div>
+  </div>
+</section>
 
-.header-wrap {
-  max-width: 1200px;
-  margin: auto;
-  padding: 16px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+<section class="section">
+  <h3>About TVS Motor Company</h3>
+  <p>
+    TVS Motor Company is one of India’s most trusted two-wheeler manufacturers,
+    present in over 80 countries. Known for innovation, racing excellence and
+    reliability, TVS continues to shape the future of mobility.
+  </p>
+</section>
 
-header h1 {
-  font-size: 24px;
-  color: #0b4fd8;
-}
+<section class="section">
+  <h3>Why Tirumala TVS?</h3>
+  <div class="card-grid">
+    <div class="card">
+      <h4>Authorized Dealer</h4>
+      <p>Genuine vehicles, spares and manufacturer warranty.</p>
+    </div>
+    <div class="card">
+      <h4>Complete TVS Range</h4>
+      <p>Apache, Raider, Ronin, Jupiter, Ntorq, iQube & XL 100.</p>
+    </div>
+    <div class="card">
+      <h4>Sales & After-Sales</h4>
+      <p>Test rides, finance, insurance & service booking.</p>
+    </div>
+  </div>
+</section>
 
-nav a {
-  margin-left: 16px;
-  text-decoration: none;
-  color: #0b4fd8;
-  font-weight: bold;
-}
+<section class="quick-links">
+  <div class="quick-links-grid">
+    <div class="quick-box"><a href="models.html">View All Models →</a></div>
+    <div class="quick-box"><a href="contacts.html">Book Test Ride →</a></div>
+    <div class="quick-box"><a href="contacts.html">Book Service →</a></div>
+    <div class="quick-box"><a href="models.html">Explore Electric (iQube) →</a></div>
+  </div>
+</section>
 
-nav a:hover {
-  text-decoration: underline;
-}
+<footer>
+  © 2026 Tirumala TVS. All rights reserved.
+</footer>
 
-/* HERO */
-.hero {
-  background: linear-gradient(120deg, #0b4fd8, #062f87);
-  color: white;
-  padding: 70px 20px;
-}
-
-.hero-content {
-  max-width: 1200px;
-  margin: auto;
-}
-
-.hero h2 {
-  font-size: 40px;
-  margin-bottom: 12px;
-}
-
-.hero p {
-  font-size: 18px;
-  max-width: 650px;
-}
-
-.hero-buttons {
-  margin-top: 24px;
-}
-
-.btn {
-  display: inline-block;
-  padding: 14px 26px;
-  border-radius: 6px;
-  font-weight: bold;
-  text-decoration: none;
-  margin-right: 12px;
-}
-
-.btn-primary {
-  background: #e11d48;
-  color: white;
-}
-
-.btn-secondary {
-  background: white;
-  color: #0b4fd8;
-}
-
-/* SECTIONS */
-.section {
-  max-width: 1200px;
-  margin: auto;
-  padding: 50px 20px;
-}
-
-.section h3 {
-  font-size: 28px;
-  color: #0b4fd8;
-  margin-bottom: 16px;
-}
-
-.section p {
-  max-width: 900px;
-  margin-bottom: 14px;
-}
-
-/* CARDS */
-.card-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.card {
-  background: white;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-}
-
-.card h4 {
-  color: #0b4fd8;
-  margin-bottom: 8px;
-}
-
-.card a {
-  display: inline-block;
-  margin-top: 10px;
-  color: #e11d48;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-/* QUICK LINKS */
-.quick-links {
-  background: #fff3cd;
-  padding: 40px 20px;
-}
-
-.quick-links-grid {
-  max-width: 1200px;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 20px;
-}
-
-.quick-box {
-  background: white;
-  padding: 18px;
-  border-radius: 8px;
-  border-left: 5px solid #e11d48;
-}
-
-.quick-box a {
-  font-weight: bold;
-  color: #0b4fd8;
-  text-decoration: none;
-}
-
-/* FOOTER */
-footer {
-  background: #0b4fd8;
-  color: white;
-  text-align: center;
-  padding: 18px;
-  margin-top: 40px;
-}
+</body>
+</html>
