--- a/index.html
+++ b/index.html
@@ -1,77 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tirumala TVS Bidarahalli | Authorized Dealer</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<header>
-  <div class="header-wrap">
-    <h1>Tirumala TVS</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="models.html">Models</a>
-      <a href="contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<section class="hero">
-  <div class="hero-content">
-    <h2>Driven by Trust. Powered by TVS.</h2>
-    <p>
-      Authorized TVS Motor Company dealer in Bengaluru offering motorcycles,
-      scooters, electric vehicles, genuine service and finance support.
-    </p>
-    <div class="hero-buttons">
-      <a href="models.html" class="btn btn-primary">Explore Models</a>
-      <a href="contacts.html" class="btn btn-secondary">Book Test Ride</a>
+    <div class="top-bar">
+        <span>📍 Bidarahalli, Bangalore - 49</span>
+        <span>📞 +91 99649 46512</span>
     </div>
-  </div>
-</section>
 
-<section class="section">
-  <h3>About TVS Motor Company</h3>
-  <p>
-    TVS Motor Company is one of India’s most trusted two-wheeler manufacturers,
-    present in over 80 countries. Known for innovation, racing excellence and
-    reliability, TVS continues to shape the future of mobility.
-  </p>
-</section>
+    <header>
+        <div class="nav-container">
+            <a href="index.html" class="logo">
+                <h1>Tirumala <span>TVS</span></h1>
+            </a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="model.html">All Models</a></li>
+                <li><a href="contacts.html">Contact Us</a></li>
+                <li><a href="contacts.html" class="btn-book">Book Service</a></li>
+            </ul>
+        </div>
+    </header>
 
-<section class="section">
-  <h3>Why Tirumala TVS?</h3>
-  <div class="card-grid">
-    <div class="card">
-      <h4>Authorized Dealer</h4>
-      <p>Genuine vehicles, spares and manufacturer warranty.</p>
+    <section class="hero">
+        <h2>Welcome to Tirumala TVS</h2>
+        <p>Your Trusted TVS Partner in Bidarahalli, Bangalore.</p>
+        <a href="model.html" class="hero-btn">Explore Bikes</a>
+    </section>
+
+    <h2 class="section-title">Popular Models</h2>
+    <div class="models-grid">
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Jupiter+125" alt="TVS Jupiter">
+            <div class="model-info">
+                <h3>TVS Jupiter 125</h3>
+                <p>Zyada Se Bhi Zyada. The ultimate family scooter.</p>
+                <a href="model.html" class="btn-outline">View Details</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Apache+RTR" alt="TVS Apache">
+            <div class="model-info">
+                <h3>TVS Apache RTR Series</h3>
+                <p>Racing DNA Unleashed. Pure Performance.</p>
+                <a href="model.html" class="btn-outline">View Details</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Ntorq+125" alt="TVS Ntorq">
+            <div class="model-info">
+                <h3>TVS Ntorq 125</h3>
+                <p>India's First Bluetooth Connected Scooter.</p>
+                <a href="model.html" class="btn-outline">View Details</a>
+            </div>
+        </div>
     </div>
-    <div class="card">
-      <h4>Complete TVS Range</h4>
-      <p>Apache, Raider, Ronin, Jupiter, Ntorq, iQube & XL 100.</p>
-    </div>
-    <div class="card">
-      <h4>Sales & After-Sales</h4>
-      <p>Test rides, finance, insurance & service booking.</p>
-    </div>
-  </div>
-</section>
 
-<section class="quick-links">
-  <div class="quick-links-grid">
-    <div class="quick-box"><a href="models.html">View All Models →</a></div>
-    <div class="quick-box"><a href="contacts.html">Book Test Ride →</a></div>
-    <div class="quick-box"><a href="contacts.html">Book Service →</a></div>
-    <div class="quick-box"><a href="models.html">Explore Electric (iQube) →</a></div>
-  </div>
-</section>
+    <section style="background-color: var(--tvs-blue); color: white; padding: 40px 5%; text-align: center; margin-top: 20px;">
+        <h2>Why Choose Tirumala TVS?</h2>
+        <div style="display: flex; justify-content: space-around; flex-wrap: wrap; margin-top: 30px;">
+            <div style="flex: 1; min-width: 250px; margin: 10px;">
+                <h3>🛠 Authorized Service</h3>
+                <p>Expert mechanics and genuine parts.</p>
+            </div>
+            <div style="flex: 1; min-width: 250px; margin: 10px;">
+                <h3>💰 Best Finance Options</h3>
+                <p>Low EMI and quick loan approvals.</p>
+            </div>
+            <div style="flex: 1; min-width: 250px; margin: 10px;">
+                <h3>🏍 Wide Range</h3>
+                <p>All TVS scooters, bikes, and mopeds available.</p>
+            </div>
+        </div>
+    </section>
 
-<footer>
-  © 2026 Tirumala TVS. All rights reserved.
-</footer>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>Tirumala TVS</h4>
+                <p>Bidarahalli, Bangalore – 560049</p>
+                <p>Near Main Bus Stop</p>
+            </div>
+            <div class="footer-section">
+                <h4>Contact</h4>
+                <p>Phone: +91 99649 46512</p>
+                <p>Email: tirumalatvs716@gmail.com</p>
+            </div>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <p><a href="model.html">Models</a></p>
+                <p><a href="contacts.html">Book Service</a></p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Tirumala TVS Bidarahalli. All Rights Reserved.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
