--- a/models.html
+++ b/models.html
@@ -1,61 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TVS Models | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>All Models - Tirumala TVS</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<header>
-  <div class="header-wrap">
-    <h1>Tirumala TVS</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="models.html">Models</a>
-      <a href="contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <header>
+        <div class="nav-container">
+            <a href="index.html" class="logo">
+                <h1>Tirumala <span>TVS</span></h1>
+            </a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="model.html" style="color: var(--tvs-red);">All Models</a></li>
+                <li><a href="contacts.html">Contact Us</a></li>
+            </ul>
+        </div>
+    </header>
 
-<section class="section">
-  <h3>Motorcycles</h3>
-  <div class="card-grid">
-    <div class="card"><h4>Apache RTR 160 / 200</h4><a href="#">View Details →</a></div>
-    <div class="card"><h4>Apache RR 310</h4><a href="#">View Details →</a></div>
-    <div class="card"><h4>Raider 125</h4><a href="#">View Details →</a></div>
-    <div class="card"><h4>Ronin</h4><a href="#">View Details →</a></div>
-  </div>
-</section>
+    <div style="background-color: var(--tvs-blue); color: white; padding: 40px 5%; text-align: center;">
+        <h2>Our Vehicle Collection</h2>
+        <p>Choose your perfect ride from the TVS family.</p>
+    </div>
 
-<section class="section">
-  <h3>Scooters</h3>
-  <div class="card-grid">
-    <div class="card"><h4>Jupiter 113</h4><a href="#">View Details →</a></div>
-    <div class="card"><h4>Jupiter 125</h4><a href="#">View Details →</a></div>
-    <div class="card"><h4>Ntorq 125</h4><a href="#">View Details →</a></div>
-    <div class="card"><h4>Zest 110</h4><a href="#">View Details →</a></div>
-  </div>
-</section>
+    <div class="models-grid">
 
-<section class="section">
-  <h3>Mopeds</h3>
-  <div class="card-grid">
-    <div class="card"><h4>TVS XL 100</h4><a href="#">View Details →</a></div>
-  </div>
-</section>
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+XL100" alt="TVS XL100">
+            <div class="model-info">
+                <h3>TVS XL100</h3>
+                <p>Heavy Duty. Multi-utility vehicle.</p>
+                <a href="/Models/xl100.html" class="btn-outline">View Specs</a>
+            </div>
+        </div>
 
-<section class="section">
-  <h3>Electric</h3>
-  <div class="card-grid">
-    <div class="card"><h4>TVS iQube</h4><a href="#">View Details →</a></div>
-  </div>
-</section>
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Jupiter" alt="TVS Jupiter">
+            <div class="model-info">
+                <h3>TVS Jupiter</h3>
+                <p>India's most loved family scooter.</p>
+                <a href="#" class="btn-outline">View Specs</a>
+            </div>
+        </div>
 
-<footer>
-  © 2026 Tirumala TVS. All rights reserved.
-</footer>
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Ntorq" alt="TVS Ntorq">
+            <div class="model-info">
+                <h3>TVS Ntorq 125</h3>
+                <p>Sporty performance with smart connect.</p>
+                <a href="#" class="btn-outline">View Specs</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Raider" alt="TVS Raider">
+            <div class="model-info">
+                <h3>TVS Raider 125</h3>
+                <p>The wicked ride. Best in class sporty commuter.</p>
+                <a href="#" class="btn-outline">View Specs</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Apache" alt="TVS Apache">
+            <div class="model-info">
+                <h3>TVS Apache Series</h3>
+                <p>RTR 160 4V, 200 4V, and RR 310.</p>
+                <a href="#" class="btn-outline">View Specs</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+iQube+EV" alt="TVS iQube">
+            <div class="model-info">
+                <h3>TVS iQube Electric</h3>
+                <p>Smart, Silent, and Eco-friendly.</p>
+                <a href="#" class="btn-outline">View Specs</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Ronin" alt="TVS Ronin">
+            <div class="model-info">
+                <h3>TVS Ronin</h3>
+                <p>Modern-Retro unscripted riding.</p>
+                <a href="#" class="btn-outline">View Specs</a>
+            </div>
+        </div>
+        
+         <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Sport" alt="TVS Sport">
+            <div class="model-info">
+                <h3>TVS Sport</h3>
+                <p>Unmatched Mileage. Budget friendly.</p>
+                <a href="#" class="btn-outline">View Specs</a>
+            </div>
+        </div>
+
+    </div>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>Visit Showroom</h4>
+                <p>Tirumala TVS</p>
+                <p>Bidarahalli, Bangalore</p>
+            </div>
+            <div class="footer-section">
+                <h4>Contact</h4>
+                <p>+91 99649 46512</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Tirumala TVS Bidarahalli.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
