--- a/models.html
+++ b/models.html
@@ -15,7 +15,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="model.html" style="color: var(--tvs-red);">All Models</a></li>
+                <li><a href="models.html" style="color: var(--tvs-red);">All Models</a></li>
                 <li><a href="contacts.html">Contact Us</a></li>
             </ul>
         </div>
@@ -23,7 +23,7 @@
 
     <div style="background-color: var(--tvs-blue); color: white; padding: 40px 5%; text-align: center;">
         <h2>Our Vehicle Collection</h2>
-        <p>Choose your perfect ride from the TVS family.</p>
+        <p>Choose your perfect ride.</p>
     </div>
 
     <div class="models-grid">
@@ -33,16 +33,25 @@
             <div class="model-info">
                 <h3>TVS XL100</h3>
                 <p>Heavy Duty. Multi-utility vehicle.</p>
-                <a href="/Models/xl100.html" class="btn-outline">View Specs</a>
+                <a href="models/xl100.html" class="btn-outline">View Details</a>
             </div>
         </div>
 
         <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Jupiter" alt="TVS Jupiter">
+            <img src="https://placehold.co/600x400?text=TVS+Jupiter+125" alt="TVS Jupiter">
             <div class="model-info">
-                <h3>TVS Jupiter</h3>
-                <p>India's most loved family scooter.</p>
-                <a href="#" class="btn-outline">View Specs</a>
+                <h3>TVS Jupiter 125</h3>
+                <p>Zyada Se Bhi Zyada.</p>
+                <a href="models/jupiter125.html" class="btn-outline">View Details</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Raider" alt="TVS Raider">
+            <div class="model-info">
+                <h3>TVS Raider</h3>
+                <p>The Wicked Ride.</p>
+                <a href="models/raider.html" class="btn-outline">View Details</a>
             </div>
         </div>
 
@@ -50,53 +59,17 @@
             <img src="https://placehold.co/600x400?text=TVS+Ntorq" alt="TVS Ntorq">
             <div class="model-info">
                 <h3>TVS Ntorq 125</h3>
-                <p>Sporty performance with smart connect.</p>
-                <a href="#" class="btn-outline">View Specs</a>
+                <p>Smart Connect Scooter.</p>
+                <a href="models/ntorq125.html" class="btn-outline">View Details</a>
             </div>
         </div>
 
-        <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Raider" alt="TVS Raider">
-            <div class="model-info">
-                <h3>TVS Raider 125</h3>
-                <p>The wicked ride. Best in class sporty commuter.</p>
-                <a href="#" class="btn-outline">View Specs</a>
-            </div>
-        </div>
-
-        <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Apache" alt="TVS Apache">
-            <div class="model-info">
-                <h3>TVS Apache Series</h3>
-                <p>RTR 160 4V, 200 4V, and RR 310.</p>
-                <a href="#" class="btn-outline">View Specs</a>
-            </div>
-        </div>
-
-        <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+iQube+EV" alt="TVS iQube">
-            <div class="model-info">
-                <h3>TVS iQube Electric</h3>
-                <p>Smart, Silent, and Eco-friendly.</p>
-                <a href="#" class="btn-outline">View Specs</a>
-            </div>
-        </div>
-
-        <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Ronin" alt="TVS Ronin">
-            <div class="model-info">
-                <h3>TVS Ronin</h3>
-                <p>Modern-Retro unscripted riding.</p>
-                <a href="#" class="btn-outline">View Specs</a>
-            </div>
-        </div>
-        
          <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Sport" alt="TVS Sport">
+            <img src="https://placehold.co/600x400?text=TVS+Apache+160" alt="Apache 160">
             <div class="model-info">
-                <h3>TVS Sport</h3>
-                <p>Unmatched Mileage. Budget friendly.</p>
-                <a href="#" class="btn-outline">View Specs</a>
+                <h3>Apache RTR 160</h3>
+                <p>Racing DNA.</p>
+                <a href="models/apache160.html" class="btn-outline">View Details</a>
             </div>
         </div>
 
@@ -105,13 +78,8 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h4>Visit Showroom</h4>
-                <p>Tirumala TVS</p>
+                <h4>Tirumala TVS</h4>
                 <p>Bidarahalli, Bangalore</p>
-            </div>
-            <div class="footer-section">
-                <h4>Contact</h4>
-                <p>+91 99649 46512</p>
             </div>
         </div>
         <div class="footer-bottom">
