--- a/models/xl100.html
+++ b/models/xl100.html
@@ -1,138 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TVS XL 100 – Price, Specs & Features | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS XL 100 – India’s most trusted moped for business and daily use. Check price, specifications, variants and features at Tirumala TVS." />
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TVS XL100 - Tirumala TVS</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="../index.html" style="margin-right:16px;">Home</a>
-      <a href="../models.html" style="margin-right:16px;">Models</a>
-      <a href="../contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <header>
+        <div class="nav-container">
+            <a href="../index.html" class="logo">
+                <h1>Tirumala <span>TVS</span></h1>
+            </a>
+            <ul class="nav-links">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../models.html">All Models</a></li>
+                <li><a href="../contacts.html">Contact Us</a></li>
+            </ul>
+        </div>
+    </header>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS XL 100</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      India’s most trusted moped for work, business and daily mobility
-    </p>
-  </div>
-</section>
+    <div class="hero" style="height: 40vh; background: var(--tvs-blue);">
+        <h2>TVS XL100 Heavy Duty</h2>
+        <p>The Multi-Utility King of the Road</p>
+    </div>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+    <div style="max-width: 1000px; margin: 40px auto; padding: 20px; display: flex; flex-wrap: wrap; gap: 40px;">
+        
+        <div style="flex: 1; min-width: 300px;">
+            <img src="https://placehold.co/600x400?text=TVS+XL100" alt="TVS Bike" style="width: 100%; border-radius: 10px;">
+        </div>
 
-  <!-- OVERVIEW -->
-  <section style="margin-bottom:40px;">
-    <h2>Overview</h2>
-    <p>
-      TVS XL 100 is a rugged and reliable moped designed for Indian roads and everyday
-      business needs. Known for its strong build, high load-carrying capacity and
-      low running costs, XL 100 is widely used by small business owners, delivery riders
-      and rural customers across India.
-    </p>
-  </section>
+        <div style="flex: 1; min-width: 300px;">
+            <h3 style="color: var(--tvs-red); margin-bottom: 20px;">Key Specifications</h3>
+            
+            <ul style="list-style: none; line-height: 2.5;">
+                <li><strong>Engine:</strong> 99.7 cc</li>
+                <li><strong>Power:</strong> 4.4 PS @ 6000 rpm</li>
+                <li><strong>Weight:</strong> 89 kg</li>
+                <li><strong>Fuel Tank:</strong> 4 Liters</li>
+                <li><strong>Starting:</strong> Kick & Self Start</li>
+            </ul>
 
-  <!-- KEY HIGHLIGHTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Key Highlights</h2>
-    <ul>
-      <li>High load-carrying capacity</li>
-      <li>Strong metal body with rugged design</li>
-      <li>Excellent fuel efficiency</li>
-      <li>Low maintenance and long service life</li>
-      <li>Trusted by millions of users across India</li>
-    </ul>
-  </section>
+            <div style="margin-top: 30px;">
+                <h4 style="margin-bottom: 10px;">Interested in this bike?</h4>
+                <a href="../contacts.html" class="btn-book">Book Test Ride</a>
+                <a href="https://wa.me/919964946512?text=I am interested in TVS XL100" class="btn-outline" style="margin-left: 10px;">WhatsApp Us</a>
+            </div>
+        </div>
+    </div>
 
-  <!-- ENGINE -->
-  <section style="margin-bottom:40px;">
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
-      <tr><td><strong>Engine</strong></td><td>99.7 cc, air-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 4.3 PS</td></tr>
-      <tr><td><strong>Torque</strong></td><td>Approx. 6.5 Nm</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>Single-speed automatic</td></tr>
-      <tr><td><strong>Usage Focus</strong></td><td>Business, delivery & daily transport</td></tr>
-    </table>
-  </section>
-
-  <!-- VARIANTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Variants Available</h2>
-    <ul>
-      <li>TVS XL 100 Heavy Duty</li>
-      <li>TVS XL 100 Comfort</li>
-      <li>TVS XL 100 i-Touchstart</li>
-    </ul>
-  </section>
-
-  <!-- FEATURES -->
-  <section style="margin-bottom:40px;">
-    <h2>Key Features</h2>
-    <ul>
-      <li>Large flat carrier for goods</li>
-      <li>Telescopic front suspension</li>
-      <li>Durable tyres for rough usage</li>
-      <li>Easy electric start option</li>
-      <li>Long seat for rider comfort</li>
-    </ul>
-  </section>
-
-  <!-- PRICE -->
-  <section style="margin-bottom:40px;">
-    <h2>Price (Indicative)</h2>
-    <p>
-      Ex-showroom price in Bengaluru starts from  
-      <strong>₹45,000 (approx.)</strong>
-    </p>
-    <p style="font-size:14px;color:#555;">
-      *Prices may vary based on variant, offers and location
-    </p>
-  </section>
-
-  <!-- WHY BUY -->
-  <section style="margin-bottom:40px;">
-    <h2>Why Choose TVS XL 100?</h2>
-    <p>
-      TVS XL 100 is the go-to choice for customers who need a dependable, economical
-      and tough two-wheeler for daily business operations. Its proven reliability,
-      excellent mileage and strong resale value make it one of the most practical
-      two-wheelers in India even in 2026.
-    </p>
-  </section>
-
-  <!-- CTA -->
-  <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Looking for TVS XL 100?</h3>
-    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and test ride.</p>
-    <a href="../contacts.html"
-       style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-      Enquire Now
-    </a>
-  </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
+    <footer>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Tirumala TVS Bidarahalli.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
